--- a/RTCV_Plugin_Sym2VMD/RTCV_Plugin_Sym2VMD/Sym2VMD.csproj
+++ b/RTCV_Plugin_Sym2VMD/RTCV_Plugin_Sym2VMD/Sym2VMD.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F257BBBE-E085-42DB-9F8D-C6BAC2726F59}</ProjectGuid>
+    <ProjectGuid>{97C4C0A4-7635-4E33-AEBD-2F119373A4F4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RTCV_Plugin_Sym2VMD</RootNamespace>
@@ -80,15 +80,15 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Ceras">
-      <Version>4.1.7</Version>
-    </PackageReference>
     <PackageReference Include="Costura.Fody">
       <Version>5.7.0</Version>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="NLog">
+      <Version>5.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
